--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <button 
               id = "googleSignInButton"
               class="w-full border border-gray-300 text-md p-2 rounded-lg mb-6 hover:bg-black hover:text-white">
-            <img src="img/google.svg" alt="img" class="w-6 h-6 inline mr-2" />
+            <img src="google.svg" alt="img" class="w-6 h-6 inline mr-2" />
             Sign in with Google
           </button>
           <div class="text-center text-gray-400">
@@ -63,7 +63,7 @@
         <!-- {/* right side */} -->
         <div class="relative">
           <img
-            src="img/maps.webp"
+            src="maps.webp"
             alt="img"
             class="w-[400px] h-full hidden rounded-r-2xl md:block object-cover "
           />
