--- a/signup.html
+++ b/signup.html
@@ -78,6 +78,7 @@
             createUserWithEmailAndPassword,
             signInWithEmailAndPassword,
             onAuthStateChanged,
+            GoogleAuthProvider,
             signOut
         } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-auth.js";
         // TODO: Add SDKs for Firebase products that you want to use
