--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
               <input type="checkbox" name="ch" id="ch" class="mr-2" />
               <span class="text-md">Remember for 30 days</span>
             </div>
-            <span 
+            <button 
               class="font-bold text-md"
               id = "resetPasswordButton"
-            >Forgot password</span>
+            >Forgot password</button>
           </div>
           <button 
               id = "signInButton"
